--- a/README
+++ b/README
@@ -6,3 +6,19 @@ burnds.pl      collects all DNSSEC related data for later analysis (outputs JSON
 analyze.pl     for analysis of the JSON files with DNS info  
 
 queue.sh       for running burnds.pl with many threads  
+
+----
+
+Example usage, batch for a lot of domains:
+
+# create a list from a signed zone file
+burngetzone.pl -f zonefile > domainlist.txt
+# run 
+queue.sh domainlist.txt
+# do some analysis
+analyze.pl -d directory --rcode     # analyze return codes
+analyze.pl -d directory --servfail  # toplist of name servers with SERVFAIL
+
+Or just get data from a domain:
+
+burnds.pl --pretty -n iis.se
