--- a/README
+++ b/README
@@ -1,10 +1,8 @@
 This is a number of tools to collect DNS data for DNSSEC analysis.
 
-burngetzone.pl cleans a (signed) zone and extracts all domains (lnames) with DS records  
+cleanzone.pl   cleans a (signed) zone and extracts all domains (lnames) with DS records  
 collect.pl     collects all DNSSEC related data for later analysis (outputs JSON)  
-
 analyze.pl     for analysis of the JSON files with DNS info  
-
 queue.sh       for running burnds.pl with many threads  
 
 ----
@@ -12,7 +10,7 @@ queue.sh       for running burnds.pl with many threads
 Example usage, batch for a lot of domains:
 
 # create a list from a signed zone file
-burngetzone.pl -f zonefile > domainlist.txt
+cleanzone.pl -f zonefile > domainlist.txt
 # run 
 queue.sh domainlist.txt
 # do some analysis
